Adding REST tests into extratest